# ml-cookiecutter-pypackage

./: Makefile  README.md  cookiecutter.json  requirements-dev.txt  setup.py
hooks/: post_gen_project.py
{{cookiecutter.project_repo}}/: Makefile  README.md  pyproject.toml  tox.ini
{{cookiecutter.project_repo}}/.github/workflows/: package.on-dispatch.yml  pythonpackage.yml
